--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 strum = "0.24"
 strum_macros = "0.24"
+cli-clipboard = "0.4.0"
